2005-01-15  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-transform.c
	* app/paint-funcs/scale-funcs.c: minor cleanups to the new Lanczos
	interpolation routines. Drawable transformations do still crash :(

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-dnd.[ch]: added new function
	gimp_display_shell_dnd_init() which connects all DND callbacks.
	Made all DND callbacks static.

	* app/display/gimpdisplayshell.c (gimp_display_shell_init): call
	above function instead of connecting all DND callbacks here. Removed
	lots of now unused #includes.

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem.c
	* app/core/gimpdrawable.c
	* app/vectors/gimpvectors.c: made GimpItem::scale() and ::resize()
	work on unattached items.

	* app/widgets/gimplayertreeview.c
	(gimp_layer_tree_view_drop_component): fix drop index.

	* app/widgets/gimpchanneltreeview.c: implement dropping of
	components as new channels. Fixes bug #158483.

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainertreeview.[ch]: added virtual function
	GimpContainerTreeView::drop_component(). Added EEKy "dnd_gimp"
	needed for gimp_selection_data_get_component().

	* app/widgets/gimpitemtreeview.c (gimp_item_tree_view_set_context):
	set the "dnd_gimp" pointer if it is NULL.

	* app/widgets/gimpcontainertreeview-dnd.c: handle component drops
	and dispatch ::drop_component() accordingly.

	* app/widgets/gimplayertreeview.c: implement dropping of
	components as new layers. Addresses bugs #158483 and #158133.

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c
	* app/display/gimpdisplayshell-dnd.[ch]
	* app/widgets/gimptoolbox-dnd.c: enabled dropping of components
	to the display and the toolbox. Addresses bug #158483.

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannel.c (gimp_channel_new*): don't require a
	non-NULL color parameter (just leave the default color untouched